code review change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <title>mess</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main>
+      <div id="app"></div>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
