--- a/sandbox-block/index.html
+++ b/sandbox-block/index.html
@@ -4,9 +4,10 @@
  </head>
 
 <body>
-  <div class="app"></div>
-    <script type="text/jsx" src="./core/event-bus.js"></script>
+  <div id="app" class="app"></div>
+    <!-- <script type="text/jsx" src="./core/event-bus.js"></script>
     <script type="text/jsx" src="./core/block.js"></script>
-    <script type="text/jsx" src="./core/index.js"></script>
+    <script type="text/jsx" src="./core/index.js"></script> -->
+    <script type="text/jsx" src="./main.js"></script>
 </body>
 </html>
