--- a/sandbox-block/index.html
+++ b/sandbox-block/index.html
@@ -5,9 +5,6 @@
 
 <body>
   <div id="app" class="app"></div>
-    <!-- <script type="text/jsx" src="./core/event-bus.js"></script>
-    <script type="text/jsx" src="./core/block.js"></script>
-    <script type="text/jsx" src="./core/index.js"></script> -->
-    <script type="text/jsx" src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
